# active-context-compression

./: .gitignore  ARTIFACTS.md  CLEANUP_CHECKLIST.md  CLEANUP_SUMMARY.md  COMPLETION.md  EXPERIMENT_RESULTS.md  Makefile  PAPER_SUBMISSION_README.md  PUBLICATION_READY.md  README.md  README.old.md  SUMMARY.md  TODO.md  analyze_focus_results.py  claude-haiku-4-5-20251001_baseline.baseline_20260109_101822.json  claude-haiku-4-5-20251001_baseline.baseline_haiku_final.json  claude-haiku-4-5-20251001_focus.focus_20260109_100233.json  claude-haiku-4-5-20251001_focus.focus_20260109_101822.json  claude-haiku-4-5-20251001_focus_v2.focus_hard5.json  claude-sonnet-4-5-20250929_baseline.test_docker.json  claude-sonnet-4-5-20250929_focus.focus_20260109_203834.json  claude-sonnet-4-5-20250929_focus.focus_20260110_064331.json  cleanup_for_publication.sh  paper.aux  paper.out  paper.tex  pyproject.toml  run_ablations.sh  run_definitive_comparison_v2.sh  run_experiment.sh  run_experiment_v2.sh  run_proper.sh
.github/: copilot-instructions.md
results/: final_experiment_20260110_132709.json  predictions_baseline_20260110_132709.json  predictions_focus_20260110_132709.json
scripts/: analyze_progress.py  analyze_results.py  check_django_task.py  check_flask_task.py  check_pylint_task.py  inspect_swebench.py  list_repos.py  run_final_experiment.py  run_focus_benchmark.py  run_memory_test.py  run_mini_benchmark.py  run_n50_benchmark.sh  run_swebench.py  run_swebench_proper.py  run_swebench_v2.py  test_tools.py  trace_tokens.py  visualize_trajectory.py
src/: config.py
src/agents/: base.py  (+6 more)
(+89 files in other folders)
