[project]
name = "focus-benchmark"
version = "0.1.0"
description = "Benchmarking AI agents with and without focus-based context compression"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "datasets>=3.0.0",
    "pandas>=2.2.0",
    "rich>=13.9.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pydantic>=2.9.0",
    "tiktoken>=0.8.0",
    "gitpython>=3.1.0",
    "swebench>=4.1.0",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "black>=24.0.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]  # pycodestyle errors, pyflakes, isort, pyupgrade
ignore = ["E501"]  # line too long (black handles this)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "ruff>=0.14.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
